[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/main_menu/MenuPrincipal.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/option_menu/OptionMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/main/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/map/Map.gd" type="Script" id=4]
[ext_resource path="res://scenes/map/Map.tscn" type="PackedScene" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Menu principal" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_right = 1024.0
margin_bottom = 600.0
mouse_default_cursor_shape = 3

[node name="OptionMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Map" parent="." instance=ExtResource( 5 )]
position = Vector2( 1024, 600 )
z_index = -1
script = ExtResource( 4 )
[connection signal="lanceJeu" from="Menu principal" to="." method="_on_Menu_principal_lanceJeu"]
[connection signal="lanceOption" from="Menu principal" to="." method="_on_Menu_principal_lanceOption"]
[connection signal="retourJeu" from="OptionMenu" to="." method="_on_OptionMenu_retourJeu"]
[connection signal="retourMenu" from="OptionMenu" to="." method="_on_OptionMenu_retourMenu"]
[connection signal="pause" from="Map" to="." method="_on_Map_pause"]
